# agentforge-arena

./: .dockerignore  .env.example  .gitignore  DEVLOG.md  LICENSE  README.md  afa_app.py  docker-compose.yml  pyproject.toml  start.command
afa_api/: __init__.py  db.py  jobs.py  main.py  routes_jobs.py  routes_readonly.py  schemas.py  serialize.py  store_load.py  worker.py
afa_api/tests/: test_api_readonly.py  test_jobs.py
audit/: README.md
audit/audit-2/: AUDIT_REPORT.md
claude_audit/: README.md
claude_audit/audit-2/: AUDIT_FINDINGS.json  AUDIT_SCORECARD.md  audit_summary.html
codex-audit/: AUDIT_FINDINGS.json  AUDIT_REPORT.md  AUDIT_SCORECARD.md  audit_summary.html  legacy-audit-summary.html
db/: schema.sql
docker/: api.Dockerfile  nginx.conf  web.Dockerfile  worker.Dockerfile
docs/: AGENTFORGE_ARENA_LOCAL_APP_IMPLEMENTATION_PLAN.md  EVALUATION_FRAMEWORK.md  FAILURE_INSPECTION.md  OBSERVABILITY_FRONTEND_DESIGN.md  PRODUCT_APP_DESIGN.md
docs/evaluation-framework/: 00-overview.md  01-run-scoring.md  02-repeated-runs.md  03-confidence.md  04-domains.md  05-difficulty.md  06-ranking.md  07-multi-objective.md  08-benchmark-design.md  09-pipeline-reproducibility.md  10-data-model.md  11-roadmap-and-recommendation.md
examples/: diagnose_task.py  eval_compare.py  eval_ollama.py  eval_pack.py  eval_persist.py  eval_subset.py  probe_parse.py  report_combined.py  report_pack.py  run_demo.py
kernel/: README.md  pyproject.toml
kernel/afa_kernel/: __init__.py  aggregate.py  confidence.py  domains.py  ranking.py  scoring.py  types.py
kernel/tests/: test_aggregate.py  test_anchors.py  test_confidence.py  test_domains.py  test_ranking.py  test_scoring.py
reports/: leaderboard.html  runs.sqlite
runner/afa_runner/: __init__.py  agents.py  agents_ollama.py  agents_openai.py  diffing.py  grader.py  pipeline.py  report.py  report_html.py  sandbox.py  store.py  task.py
runner/tests/: test_agents_ollama.py  (+12 more)
tasks/: manifest.json
tests/: test_api_readonly.py  test_jobs_api.py
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+222 files in other folders)
