[project]
name = "agentforge-arena"
version = "0.2.0"
description = "AgentForge Arena — offline-first benchmarking and observability for code-modifying agents (v0.2)."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

# Single test entrypoint for the project: run `python3 -m pytest` from
# the project root. Both packages are importable without an editable install.
# The runner depends on the kernel; the kernel depends on nothing but stdlib.
[tool.pytest.ini_options]
pythonpath = ["kernel", "runner"]
testpaths = ["kernel/tests", "runner/tests"]
addopts = "-q"
